<?xml version="1.0" encoding="utf-8"?>
<resources>

	<string name="app_name">Quick Timer</string>

	<string name="ok">OK</string>
	<string name="cancel">Cancel</string>

	<string name="no_timers">No timers to display.</string>

	<string name="timer_done">Done!</string>

	<string name="timer_template_hms">%1$dh %2$02dm %3$02ds</string>
	<string name="timer_template_ms">%1$02dm %2$02ds</string>
	<string name="timer_template_s">%02ds</string>

	<string name="duration_picker_title">Select duration</string>
	<string name="duration_picker_h">h</string>
	<string name="duration_picker_m">m</string>
	<string name="duration_picker_s">s</string>
	<string name="duplicate_timer_error">That duration already exists.</string>

	<string name="timer_options_title">Timer Options</string>
	<string name="repeat_timer_option">Repeat Timer</string>
	<string name="delete_timer_option">Delete Timer</string>
	<string name="delete_timer_confirm">Are you sure?</string>

	<string name="menu_option_settings">Settings</string>

	<string name="setting_group_timer_display">Timer Display</string>
	<string name="setting_key_keep_screen_on">keep_screen_on</string>
	<string name="setting_title_keep_screen_on">Keep the screen on</string>

	<string name="setting_group_timer_completion_alarm">Timer Completion Alarm</string>
	<string name="setting_key_vibrate_on_timer_end">vibrate_on_timer_end</string>
	<string name="setting_title_vibrate_on_timer_end">Vibrate</string>
	<string name="setting_key_sound_on_timer_end">sound_on_timer_end</string>
	<string name="setting_title_sound_on_timer_end">Sound</string>

</resources>
