<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
		xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:orientation="horizontal"
		android:gravity="center"
>

	<NumberPicker
			android:id="@+id/hour_picker"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
	/>

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/space_nano"
			android:layout_marginLeft="@dimen/space_nano"
			android:layout_marginEnd="@dimen/space_small"
			android:layout_marginRight="@dimen/space_small"
			android:text="@string/duration_picker_h"
			style="@style/Text.PickerUnit"

	/>

	<NumberPicker
			android:id="@+id/min_picker"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
	/>

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="@dimen/space_nano"
			android:layout_marginLeft="@dimen/space_nano"
			android:layout_marginEnd="@dimen/space_small"
			android:layout_marginRight="@dimen/space_small"
			android:text="@string/duration_picker_m"
			style="@style/Text.PickerUnit"
	/>

	<NumberPicker
			android:id="@+id/sec_picker"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
	/>

	<TextView
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/duration_picker_s"
			style="@style/Text.PickerUnit"
	/>

</LinearLayout>
